test/expressions/complexOrderedCompareErrors.maxParam.good
complexOrderedCompareErrors.chpl:25: error: min() and max() are not supported for complex arguments
